--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
- html
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
+    <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-16LMNCXZQ1"></script>
+            <script>
+                  window.dataLayer = window.dataLayer || [];
+                        function gtag(){dataLayer.push(arguments);}
+                              gtag('js', new Date());
+                              
+                                    gtag('config', 'G-16LMNCXZQ1');
+                                        </script>
+                                            <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JISHENG OS // ULTIMATE PERSISTENT</title>
     
